tests/baselines/reference/scannerImportDeclaration1.errors.txt
==== tests/cases/compiler/scannerImportDeclaration1.ts (1 errors) ====
    import TypeScript = TypeScriptServices.TypeScript;
                        ~~~~~~~~~~~~~~~~~~
!!! scannerImportDeclaration1.ts(1,21): error TS2179: Unable to resolve module reference 'TypeScriptServices'.